feat: added progress bars to up/download pages
feat: added streaming for downloads
